--- a/index.html
+++ b/index.html
@@ -1,20 +1,98 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify Imersão</title>
+    <link rel="stylesheet" href="/estilos/reset.css">
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/solid.css"
+        integrity="sha384-Tv5i09RULyHKMwX0E8wJUqSOaXlyu3SQxORObAI08iUwIalMmN5L6AvlPX2LMoSE" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/fontawesome.css"
+        integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous" />
 </head>
+
 <body>
-    <h1>Spotify</h1>
     <div class="sidebar">
-        <nav>
-            <div>
-                <a href=""><img src="" alt="imagem_logo"></a>
+        <nav class="sidebar_navigation">
+            <div class="logo">
+                <a href=""><img src="imagens/icons/logo-spotify.png" alt="logo do Spotify"></a>
+
             </div>
+            <div>
+                <ul>
+                    <li>
+                        <a href="">
+                            <span class="fa fa-home"></span>
+                            <span>Início</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <span class="fa fa-search"></span>
+                            <span>Buscar</span>
+                        </a>
+
+                    </li>
+
+                </ul>
+
+            </div>
+
+        </nav>
+
+        <nav class="biblioteca">
+            <div>
+                <button><span class="fa fa-book"></span>Sua biblioteca</button>
+                <span class="fa fa-plus"></span>
+            </div>
+            <div>
+                <section>
+                    <section>
+                        <div>
+                            <span>Crie sua primeira playlist</span>
+                            <span>È facil vamos te ajudar</span>
+                        </div>
+                            <button>Criar playlist</button>
+                        <div>
+                        </div>
+                    </section>
+                    <section>
+                        <div>
+                            <span>Que tal seguir um podecast novo</span>
+                            <span>Avisaremos voce sobre novos episodios</span>
+                        </div>
+                        <div>
+                            <button>Explore podcasts</button>
+                        </div>
+                    </section>
+                </section>
+            </div>
+            <div>
+                <div>
+                    <div>
+                        <div><a href="">Legal</a></div>
+                        <div><a href="">Centro de Privacidade</a></div>
+                        <div><a href="">Política de Privacidade</a></div>
+                        <div><a href="">Cookies</a></div>
+                        <div><a href="">Sobre Anuncios</a></div>
+                        <div><a href="">Acessibilidade</a></div>
+                        <div><a href="">Notice at Collection</a></div>
+                        <div><a href="">Your Privacity Choices</a></div>
+                        <a href="">Cookies</a>
+                        
+                    </div>
+                </div>
+                <div>
+                    <button><span class="fa fa-globe"></span>Protugues</button>
+                </div>
+
+            </div>
+
         </nav>
 
     </div>
 </body>
+
 </html>
