--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
                 <a href=""><img src="imagens/icons/logo-spotify.png" alt="logo do Spotify"></a>
 
             </div>
-            <div>
                 <ul>
                     <li>
                         <a href="">
@@ -38,59 +37,45 @@
 
                 </ul>
 
-            </div>
-
         </nav>
 
-        <nav class="biblioteca">
-            <div>
-                <button><span class="fa fa-book"></span>Sua biblioteca</button>
+        <div class="library">
+            <div class="library_content">
+                <button class="library_button">
+                    <span class="fa fas fa-book"></span>
+                    <span>Sua biblioteca</span>
+                </button>
                 <span class="fa fa-plus"></span>
-            </div>
-            <div>
-                <section>
-                    <section>
-                        <div>
-                            <span>Crie sua primeira playlist</span>
-                            <span>È facil vamos te ajudar</span>
-                        </div>
-                            <button>Criar playlist</button>
-                        <div>
-                        </div>
-                    </section>
-                    <section>
-                        <div>
-                            <span>Que tal seguir um podecast novo</span>
-                            <span>Avisaremos voce sobre novos episodios</span>
-                        </div>
-                        <div>
-                            <button>Explore podcasts</button>
-                        </div>
-                    </section>
-                </section>
-            </div>
-            <div>
-                <div>
-                    <div>
-                        <div><a href="">Legal</a></div>
-                        <div><a href="">Centro de Privacidade</a></div>
-                        <div><a href="">Política de Privacidade</a></div>
-                        <div><a href="">Cookies</a></div>
-                        <div><a href="">Sobre Anuncios</a></div>
-                        <div><a href="">Acessibilidade</a></div>
-                        <div><a href="">Notice at Collection</a></div>
-                        <div><a href="">Your Privacity Choices</a></div>
-                        <a href="">Cookies</a>
-                        
-                    </div>
-                </div>
-                <div>
-                    <button><span class="fa fa-globe"></span>Protugues</button>
-                </div>
 
             </div>
 
-        </nav>
+            <section class="section_playlist">
+                <div class="section_playlist_content">
+                    <span class="text title">Crie sua primeira playlist</span>
+                    <span class="text subtitle">È facil, vamos te ajudar</span>
+                    <button class="section_playlist_button">
+                        <span>Criar playlist</span>
+
+                    </button>
+
+                </div>
+
+            </section>
+
+            <div class="cookies">
+                <a href="">Cookies</a>
+
+            </div>
+
+            <div class="languages">
+                <button class="languages_button">
+                    <span class="fa fa-globe"></span>
+                    <span>Português do Brasil</span>
+                </button>
+
+            </div>
+
+        </div>
 
     </div>
 </body>
