--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@
         </div>
 
     </div>
+    <footer>
+        <div class="rodape">
+            <span class="text subtitle">Testar o premium de graça</span>
+            <span class="text title">Inscreva-se para curtir musicas ilimitadas e podcasts só com alguns anúncios. Não precisa de cartão de crédito</span>
+            <button class="rodape_button">Inscreva-se gratís</button>
+
+        </div>
+    </footer>
 </body>
 
 </html>
