--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify Imersão</title>
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="/estilos/reset.css">
-    <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/vars.css">
+    <link rel="stylesheet" href="estilos/main-content.css">
+    <link rel="stylesheet" href="estilos/sidebar-footer.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/solid.css"
         integrity="sha384-Tv5i09RULyHKMwX0E8wJUqSOaXlyu3SQxORObAI08iUwIalMmN5L6AvlPX2LMoSE" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/fontawesome.css"
@@ -20,22 +23,22 @@
                 <a href=""><img src="imagens/icons/logo-spotify.png" alt="logo do Spotify"></a>
 
             </div>
-                <ul>
-                    <li>
-                        <a href="">
-                            <span class="fa fa-home"></span>
-                            <span>Início</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <span class="fa fa-search"></span>
-                            <span>Buscar</span>
-                        </a>
+            <ul>
+                <li>
+                    <a href="">
+                        <span class="fa fa-home"></span>
+                        <span>Início</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <span class="fa fa-search"></span>
+                        <span>Buscar</span>
+                    </a>
 
-                    </li>
+                </li>
 
-                </ul>
+            </ul>
 
         </nav>
 
@@ -78,10 +81,45 @@
         </div>
 
     </div>
+
+    <main>
+        <div class="main-container">
+            <nav class="header_navigation">
+                <div class="navigation">
+                    <button class="arrowleft">
+                        <img src="imagens/icons/small-left.png" alt="seta à esquerda">
+                    </button>
+                    <button class="arrowright">
+                        <img src="imagens/icons/small-right.png" alt="seta à direita">
+                    </button>
+
+                </div>
+
+                <div class="header_search">
+                    <img src="imagens/icons/search.png" alt="">
+                    <input type="text" id="search-input" maxlength="800" placeholder="O que você quer ouvir?">
+
+                </div>
+
+                <div class="header_login">
+                    <button class="subscribe">Increva-se</button>
+                    <button class="login">Entrar</button>
+
+                </div>
+
+            </nav>
+
+        </div>
+
+    </main>
+
     <footer>
         <div class="rodape">
-            <span class="text subtitle">Testar o premium de graça</span>
-            <span class="text title">Inscreva-se para curtir musicas ilimitadas e podcasts só com alguns anúncios. Não precisa de cartão de crédito</span>
+            <div class="rodape_content">
+                <span class="text subtitle">Testar o premium de graça</span>
+                <span class="text title">Inscreva-se para curtir musicas ilimitadas e podcasts só com alguns anúncios.
+                    Não precisa de cartão de crédito</span>
+            </div>
             <button class="rodape_button">Inscreva-se gratís</button>
 
         </div>
